force-app/main/default/objects/Loan__c/fields/Aadhar_Verified__c.field-meta.xml
<CustomField>
    <fullName>Aadhar_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aadhar Verified</label>
    <type>Checkbox</type>
</CustomField>