force-app/main/default/objects/Loan__c/fields/Default_By__c.field-meta.xml
<CustomField>
    <fullName>Default_By__c</fullName>
    <formula>IF(TODAY()&gt; Installment_Payment_Due_Date__c, TODAY()- Installment_Payment_Due_Date__c, 0)</formula>
    <label>Default By</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>