force-app/main/default/objects/Loan__c/fields/Installment_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Installment_Payment_Date__c</fullName>
    <label>Installment Payment Date</label>
    <type>Date</type>
</CustomField>