force-app/main/default/objects/Loan__c/fields/Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate__c</fullName>
    <formula>IF( ISPICKVAL(Loan_Products__c , &apos;Loans for consumer durables (CD)&apos;) , 0.105 ,  IF( ISPICKVAL(Loan_Products__c , &apos;Personal Loans&apos;) , 0.13 ,IF( ISPICKVAL(Loan_Products__c , &apos;Two-Wheeler and Car Loans&apos;) , 0.09 , IF( ISPICKVAL(Loan_Products__c , &apos;Home Loans&apos;) , 0.0755 , 0 ))))</formula>
    <label>Interest Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>