force-app/main/default/objects/Loan__c/fields/Loan_Products__c.field-meta.xml
<CustomField>
    <fullName>Loan_Products__c</fullName>
    <label>Loan Products</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Loans for consumer durables (CD)</fullName>
            </value>
            <value>
                <fullName>Personal Loans</fullName>
            </value>
            <value>
                <fullName>Two-Wheeler and Car Loans</fullName>
            </value>
            <value>
                <fullName>Home Loans</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>